VerifyRoles functionality added && improvement @ issue fixed
